--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 h1{
-  color: blue;
+  color: green;
   text-align: center;
 }
 p{
-  font-family: fantasy;
+  font-size: 15px;
   line-height: normal;
 }
